assets/sass/_gallery.scss
.virtuoso_portfolio_image_gallery {
  max-width: 1500px;
  margin: 0 auto;

  .category_selector {

    .categories {

      margin-left: 8px;

      @include media-query('sm') {
        margin-left: 0;
      }


      @include media-query('med') {
        margin-left: 25px;
      }

      a {

        @include media-query('sm') {
          font-size: 12px;
        }

        &:first-child {
          margin-right: 8px;

          @include media-query('med') {
            margin-right: 25px;
          }
        }

        &:last-child {
          margin-left: 8px;

          @include media-query('med') {
            margin-left: 25px;
          }
        }

        &:not(:first-child):not(:last-child) {
          margin: 0 8px;

          @include media-query('med') {
            margin: 0 25px;
          }
        }

        &:active {
          border-bottom: 1px solid #fff;
        }
      }
    }

  }

  .virtuoso_gallery {
    max-width: 1030px;
    margin: 0 auto;
  }

  .gallery_wrap {


    display: block;



    .portfolio_group_wrap {

      display: none;

      @include media-query('med'){

        //@supports not (position: sticky) {
        display: flex;
        flex-wrap: wrap;
        margin: -80px 0 0 -80px;
        //}

        //@supports (position: sticky) {
        //  display: grid;
        //  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
        //  grid-column-gap: 80px;
        //  grid-row-gap: 60px;
        //  justify-items: center;
        //}

      }

      .item_wrap {
        position: relative;

        .portfolio_header_wrap {
          display: flex;
          flex-direction: column;
          @supports (position: sticky) {
            padding: 10px;
            background-image: linear-gradient(to left, rgba(0,0,0,0) 50%, rgba(45, 45, 45, 0.9) 50%);
            background-size: 200% 100%;
            background-position:right bottom;
            transition:all 500ms ease;
          }

        }

        &:hover,
        &:active {
          .portfolio_header_wrap {
            background-position: left bottom;
          }
        }


      }


      li {
        display: flex;
        justify-content: center;

        @include media-query('med'){
          //@supports not (position: sticky) {
          flex-grow: 1;
          flex-shrink: 1;
          //}

          //@supports not (position: sticky) {

          width: 280px;
          padding: 80px 0 0 80px;
          //}

        }

        &:not(:first-child):not(:last-child) {
          margin: 60px 0;

          @include media-query('med'){
            margin: 0;
          }
        }

      }

    }

  }

  .portfolio_header_wrap {
    position: absolute;
    top: 50%;
    right: 40px;
    transform: translateY(-50%);
    width: 200px;

    @include media-query('sm') {
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      text-align: center;
    }

    @include media-query('med') {
      right: -90px;
    }

    a {
      &:hover {
        color: #fff !important;
      }

    }

  }

  img.single_slider_item {
    width: 100%;

    @supports (position: sticky) {
      width: 280px;
      object-fit: cover;
    }

    border: 4px solid transparent;
    border-radius: 2px;
    filter: brightness(.7);
    transition: width 500ms, filter 500ms;

    @include media-query('med') {
      height: 350px;

      @supports (position: sticky) {
        &:hover,
        &:active {
          width: 350px;
        }
      }

      &:hover,
      &:active {
        border: 4px solid #888888;
        filter:brightness(1);

      }

    }

  }

  .show_more {
    a {
      width: 100px;
      margin: 80px auto 0 auto;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      font-style: italic;
      font-weight: bold;
      cursor: pointer;
    }
    .icon {
      margin-top: 10px;

    }

  }


}

